Work around a bug in KURL's parsing of Windows-style absolute file: URLs

Fixes <http://webkit.org/b/55674> Many tests fail in WebKit2 mode on Windows due to
incorrect parsing of absolute Windows-style file: URLs

Reviewed by Tim Hatcher.

* WebKitTestRunner/TestInvocation.cpp:
(WTR::createWKURL): Add a "localhost" host to file: URLs we create to work around
<http://webkit.org/b/55683>.

Canonical link: https://commits.webkit.org/70144@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80249 268f45cc-cd09-0410-ab3c-d52691b4dbfc